source/Tubeshade.Server/wwwroot/css/site.css
html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

img:-moz-loading {
    visibility: hidden;
}

video {
    max-height: 80vh;
}

video[poster] {
    object-fit: cover;
}

.tubeshade-video-thumbnail {
    aspect-ratio: 16 / 9;
    object-fit: cover;
}

.tubeshade-paragraph {
    white-space: pre-line;
    text-align: justify;
}

